Add watch settings (advanced WatchPrefs); rename commands; drop --add-opens
Watch settings: set the "advanced" prefs the official app exposes but the watch
menus don't (quick-launch buttons, ambient-light threshold, backlight, vibration,
text size, …). They live in the watch's WatchPrefs BlobDB; new WatchPrefsControl
maps stoandl's string config/CLI values onto the right typed WatchPreference and
applies via LibPebble.setWatchPref.
  - `stoandl settings [filter]` lists them (compact SETTING/NAME/CURRENT; filtered
    view adds allowed values + descriptions); `stoandl set-setting <id> <value>`
    sets one live.
  - `watch.<id> = value` config keys are applied authoritatively on every connect.

Command renames for clarity now that watch settings exist:
  - `stoandl settings [app]`  → `stoandl config [app]`   (PKJS/Clay config page)
  - `stoandl prefs`           → `stoandl settings`        (list watch settings)
  - `stoandl set-pref`        → `stoandl set-setting`     (set a watch setting)

Drop the `--add-opens=org.freedesktop.dbus/...` flags everywhere (CLI wrapper,
systemd/openrc units, APKBUILD, build.gradle, docs). The fat JAR runs on the
classpath where dbus-java is in the unnamed module, so the BecomeMonitor reflection
needs no opens — the flags only produced "WARNING: Unknown module: org.freedesktop.dbus".

Docs: configuration.md (Watch settings + network/egress already covered), README,
features.md (watch settings under to-be-tested), conf.example, TESTING.md §5.5.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>